--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <link rel='stylesheet' href='style.css'>
+    <script src='index.js'></script>
+    <head>
+        Basic Addition
+    </head>
+
+    <body>
+        <input id="input1"></input>
+        <p> + </p>
+        <input id="input2"></input>
+        <button id='Enter'>Solve</button>
+    </body>
 </html>
