--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <link rel='stylesheet' href='style.css'>
     <script src='index.js'></script>
-    <head>
+    <head id="header">
         Basic Addition
     </head>
 
